Bug 2043430 - Fixed UTF8 sequences handling in llama.cpp generation r=jbowser,ai-platform-reviewers

Added a test to validate that llama.cpp native generation handles UTF8 sequences correctly.
The test uses a tiny model outputing a predictable sequence of tokens.
The python script used to produce the test model is attached on Bugzilla.

Differential Revision: https://phabricator.services.mozilla.com/D308124